[gd_scene load_steps=8 format=3 uid="uid://dkrdjtyb1p88n"]

[ext_resource type="Script" path="res://scenes/screens/levels/units/DefaultUnit.gd" id="1_vdjhd"]
[ext_resource type="Texture2D" uid="uid://ixa58p2rs7m1" path="res://img/knight.png" id="2_bl1id"]
[ext_resource type="Script" path="res://scenes/screens/levels/units/CollisionArea.gd" id="4_gcuuy"]
[ext_resource type="PackedScene" uid="uid://ckpuh02hucwvd" path="res://components/HealthComponent.tscn" id="4_oq3j3"]
[ext_resource type="PackedScene" uid="uid://blmv0tqwcbn4s" path="res://components/default_attack_comp.tscn" id="5_a8pq7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lag7r"]
radius = 10.6301

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3ojo"]
size = Vector2(49, 48)

[node name="basic_unit" type="StaticBody2D" groups=["living_units"]]
z_index = 2
collision_mask = 9
input_pickable = true
script = ExtResource("1_vdjhd")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
offset_right = 49.0
offset_bottom = 48.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(25, 24)
texture = ExtResource("2_bl1id")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="UnitStatsBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 49.0
offset_right = 1.0
offset_bottom = 49.0

[node name="ColorRect" type="ColorRect" parent="UnitStatsBar"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 0
offset_right = 48.0
offset_bottom = 74.0
color = Color(0.168627, 0.137255, 0.054902, 0.360784)

[node name="VBoxContainer" type="VBoxContainer" parent="UnitStatsBar"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 74.0

[node name="Health" type="Label" parent="UnitStatsBar/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Health:"

[node name="Actions" type="Label" parent="UnitStatsBar/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Actions:"

[node name="Attacks" type="Label" parent="UnitStatsBar/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Attacks:"

[node name="HealthComponent" parent="." instance=ExtResource("4_oq3j3")]
visible = false
position = Vector2(-8, -8)

[node name="MovementRangeArea" type="Area2D" parent="."]
visible = false
light_mask = 2

[node name="MovementRangeArea" type="CollisionShape2D" parent="MovementRangeArea"]
visible = false
visibility_layer = 3
position = Vector2(25, 24)
shape = SubResource("CircleShape2D_lag7r")
debug_color = Color(0.537255, 0.568627, 0.0862745, 0.862745)

[node name="CollisionArea" type="Area2D" parent="."]
script = ExtResource("4_gcuuy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
visibility_layer = 25
position = Vector2(24.5, 24)
shape = SubResource("RectangleShape2D_n3ojo")
debug_color = Color(0.835294, 0.301961, 0.623529, 0.419608)

[node name="DefaultAttackComp" parent="." instance=ExtResource("5_a8pq7")]
unique_name_in_owner = true
position = Vector2(25, 24)
rotation = 0.239694

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="hp_changed" from="HealthComponent" to="." method="_on_health_component_hp_changed"]
[connection signal="area_entered" from="MovementRangeArea" to="." method="_on_movement_range_area_area_entered"]
[connection signal="area_exited" from="MovementRangeArea" to="." method="_on_movement_range_area_area_exited"]
[connection signal="remain_attacks_updated" from="DefaultAttackComp" to="." method="_on_default_attack_comp_remain_attacks_updated"]

[editable path="DefaultAttackComp"]
